# updown

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  Anchor.toml  Cargo.toml  Dockerfile  Pacifica-api.md  README.md  TECH_STACK.md  docker-compose.yml  nixpacks.toml  package.json  pnpm-lock.yaml  thesportsdb-debug.html  tsconfig.anchor.json  tsconfig.json  turbo.json
config/: security-headers.js
docs/: ADMIN-STYLE-GUIDE.md  BUG-AUDIT.md  CERTIK-AUDIT-SCOPE.html  CERTIK-AUDIT-SCOPE.md  CODE-AUDIT-FIX-PLAN.md  CODE-AUDIT.md  DEPLOY-MAINNET.md  DEVELOPMENT_PLAN.md  Dependencies.md  Diagrma-Arquitectura.md  ENGINEERING_STANDARDS.md  IMPLEMENTATION-PLAN-GAMIFICATION.md  LAUNCH-CHECKLIST.md  MIGRATION-PLAN.md  PDA-VAULT-MIGRATION.md  PLAN-ADMIN-REFACTOR.md  PLAN-AUTO-PAYOUT.md  PLAN-BET-CARD-UNIFY.md  PLAN-BOTH-SIDES-BETTING.md  PLAN-CRYPTO-PREDICTIONS.md  PLAN-ENGINEERING-HARDENING.md  PLAN-FIXTURE-SYNC-ODDS-API.md  PLAN-LIVESCORE-SOURCE-SPLIT.md  PLAN-POLYMARKET-DOMAIN.md  PLAN-POOL-CREATION-TOGGLE.md  Pacifica-api.md  (+25 more)
programs/parimutuel_pools/: Cargo.toml
programs/parimutuel_pools/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/parimutuel_pools/src/instructions/: cancel_tournament.rs  claim.rs  claim_tournament_prize.rs  close_losing_bet.rs  close_pool.rs  close_tournament.rs  deposit.rs  force_close_pool.rs  initialize_pool.rs  initialize_tournament.rs  mod.rs  refund.rs  refund_bettor.rs  refund_participant.rs  register_participant.rs  resolve.rs  resolve_tournament.rs  sweep_vault_dust.rs
programs/parimutuel_pools/tests/: money_math.rs
(+732 files in other folders)
