[workspace]
members = [
    "programs/*"
]
resolver = "2"

# Patch crates with edition 2024 to use edition 2021 for Solana toolchain compatibility
[patch.crates-io]
blake3 = { path = "patches/blake3" }
constant_time_eq = { path = "patches/constant_time_eq" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
