[package]
name = "parimutuel_pools"
version = "0.1.0"
description = "Solana parimutuel pool betting program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "parimutuel_pools"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"

[dev-dependencies]
# Host-side unit tests for the money math (tests/money_math.rs). Needs Pubkey
# to construct Pool fixtures; the lib only `use`s anchor_lang privately.
anchor-lang = "0.31.1"
